Fix pkg-config checks for libicuuc
ucnv_* functions from ICU are used by encoding.c. These functions are
provided by libicuuc and available via pkg-config as the icu-uc module.
However, the pkg-config checks for ICU in configure.ac, CMakeLists.txt,
and meson.build only include icu-i18n. As a result, a source build can
fail with:

    /bin/bash ./libtool  --tag=CC   --mode=link gcc-11 -pedantic -Wall -Wextra -Wshadow -Wpointer-arith -Wcast-align -Wwrite-strings -Wstrict-prototypes -Wmissing-prototypes -Wno-long-long -Wno-format-extra-args   -std=gnu11   -o xmllint xmllint-xmllint.o -lreadline -lhistory -lncurses libxml2.la
    libtool: link: gcc-11 -pedantic -Wall -Wextra -Wshadow -Wpointer-arith -Wcast-align -Wwrite-strings -Wstrict-prototypes -Wmissing-prototypes -Wno-long-long -Wno-format-extra-args -std=gnu11 -o .libs/xmllint xmllint-xmllint.o  -lreadline -lhistory -lncurses ./.libs/libxml2.so -Wl,-rpath -Wl,/home/linuxbrew/.linuxbrew/Cellar/libxml2/2.13.4_4/lib
    /usr/bin/ld: ./.libs/libxml2.so: undefined reference to `UCNV_TO_U_CALLBACK_STOP_76'
    /usr/bin/ld: ./.libs/libxml2.so: undefined reference to `ucnv_close_76'
    /usr/bin/ld: ./.libs/libxml2.so: undefined reference to `UCNV_FROM_U_CALLBACK_STOP_76'
    /usr/bin/ld: ./.libs/libxml2.so: undefined reference to `ucnv_setToUCallBack_76'
    /usr/bin/ld: ./.libs/libxml2.so: undefined reference to `ucnv_open_76'
    /usr/bin/ld: ./.libs/libxml2.so: undefined reference to `ucnv_convertEx_76'
    /usr/bin/ld: ./.libs/libxml2.so: undefined reference to `ucnv_setFromUCallBack_76'
    collect2: error: ld returned 1 exit status
    make[1]: *** [Makefile:990: xmllint] Error 1

This was reported to Homebrew in [1].

We can fix that by adding icu-uc to the list of ICU components to check
for.

[1]: https://github.com/orgs/Homebrew/discussions/5699#discussioncomment-11131129

Signed-off-by: Ruoyu Zhong <zhongruoyu@outlook.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -343,9 +343,9 @@ if(LIBXML2_WITH_ICU)
         set(ICU_LDFLAGS "-licudata -licui18n -licuuc")
     endif()
     list(APPEND XML_PRIVATE_LIBS "${ICU_LDFLAGS}")
-    pkg_check_modules(ICU_PC IMPORTED_TARGET icu-i18n)
+    pkg_check_modules(ICU_PC IMPORTED_TARGET icu-i18n icu-uc)
     if(ICU_PC_FOUND)
-        list(APPEND XML_PC_REQUIRES icu-i18n)
+        list(APPEND XML_PC_REQUIRES icu-i18n icu-uc)
     else()
         list(APPEND XML_PC_LIBS "${ICU_LDFLAGS}")
     endif()
